# quxlang

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  COMMERCIAL  COPYRIGHT  CSetup.yml  DESIGN.md  Doxyfile  README.md  RPNX-PERMISSIVE-v4.license  TODO.md  argparser.hpp  ast.hpp  collector.hpp  compiler.hpp  compiler_fwd.hpp  configure  dependency_resolver_chain.hpp  example.qx  example.sr  example2.sr  example3.sr  example4.sr  example5.ry  global_lookup_resolver.hpp  global_lookup_resolver_fwd.hpp  indexer.hpp  input_source.hpp  lir.hpp  lir_function.hpp  lir_type_index.hpp  lookup_sequence.hpp  main.cpp  map_alg.hpp  parser.hpp  semantic_generator.hpp  size_index_resolver.hpp  size_index_resolver_fwd.hpp  spec.md  (+7 more)
quxlang-debugger-ui/: CMakeLists.txt  main.cpp
rpnx/: CMakeLists.txt  tests.cpp
rpnx/include/rpnx/: compare.hpp  cow.hpp  debug.hpp  demangle.hpp  error_explainer.hpp  inttypes.h  metadata.hpp  range.hpp  resolver2.hpp  resolver_utilities.hpp  result.hpp  serializer.hpp  simple_coroutine.hpp  string.hpp  uint64_base.hpp  value.hpp  variant.hpp
rpnx/include/rpnx/compat/: variant_serializer.hpp
rylang/: CMakeLists.txt  tests.cpp
rylang/debug/lldb/: lldb_rylang.py
rylang/include/rpnx/: graph_solver.hpp  resolver_utilities.hpp  value.hpp
rylang/include/rylang/: collector.hpp  compiler.hpp  compiler_fwd.hpp  cow.hpp  debug.hpp  filelist.hpp  fwd.hpp  input_aggregator.hpp  llvm_code_generator.hpp  macros.hpp  operators.hpp  ordering.hpp  parser.hpp  to_pretty_string.hpp  variant_utils.hpp
rylang/include/rylang/asm/: asm.hpp
rylang/include/rylang/ast/: array_ref_ast.hpp  class_entity_ast.hpp  class_template_ast.hpp  class_templex_entity_ast.hpp  entity_ast.hpp  entity_ast_base.hpp  file_ast.hpp  function_arg_ast.hpp  function_ast.hpp  functum_entity_ast.hpp  integral_keyword_ast.hpp  lookup_chain_ast.hpp  member_variable_ast.hpp  module_ast.hpp  module_ast_precursor1.hpp  namespace_entity_ast.hpp  null_object_ast.hpp  pointer_ref_ast.hpp  reference_type_ast.hpp  symbol_ref_ast.hpp  variable_ast.hpp  variable_entity_ast.hpp
rylang/include/rylang/ast2/: ast2_class.hpp  ast2_class_declaration.hpp  ast2_class_function_declaration.hpp  ast2_class_template.hpp  ast2_class_variable_declaration.hpp  ast2_entity.hpp  ast2_externfunc.hpp  ast2_function_arg.hpp  ast2_function_declaration.hpp  ast2_function_delegate.hpp  ast2_functum.hpp  ast2_module.hpp  ast2_named_declaration.hpp  ast2_named_function_declaration.hpp  ast2_named_variable_declaration.hpp  ast2_namespace.hpp  ast2_templex.hpp  ast2_type_map.hpp  ast2_variable.hpp  ast2manip.hpp
rylang/include/rylang/converters/: qual_converters.hpp
rylang/include/rylang/data/: absolute_lookup_reference.hpp  call_overload_set.hpp  call_parameter_information.hpp  canonical_lookup_chain.hpp  canonical_pointer_type_reference.hpp  canonical_resolved_function_chain.hpp  canonical_type_reference.hpp  class_field_declaration.hpp  class_field_info.hpp  class_id_ast_resolver.hpp  class_layout.hpp  class_list.hpp  class_member_variable_declaration.hpp  class_member_variable_list.hpp  class_member_variable_precursor1.hpp  code_relocation.hpp  codepath_execution_block.hpp  codepath_execution_return.hpp  codepath_expression.hpp  contextual_type_reference.hpp  cpu_architecture.hpp  entity_category.hpp  expression.hpp  expression_add.hpp  expression_bool.hpp  expression_call.hpp  expression_copy_assign.hpp  expression_dotreference.hpp  expression_equals.hpp  expression_lvalue_reference.hpp  expression_move_assign.hpp  expression_multiply.hpp  expression_numeric_literal.hpp  expression_subtract.hpp  file_module_map.hpp  functanoid_instanciation.hpp  function_argument.hpp  function_block.hpp  function_delegate.hpp  function_expression_statement.hpp  (+46 more)
rylang/include/rylang/ex/: unexpected_eof.hpp
rylang/include/rylang/linker/: elf_linker.hpp
rylang/include/rylang/llvm/: qux_mc_streamer.hpp
rylang/include/rylang/llvmg/: vm_llvm_frame.hpp  (+1 more)
rylang/rylang/: notes
rylang/rylang/sources/: compiler.cpp  example_file.cpp  llvm_code_generator.cpp  main.cpp  merge_entity.cpp  rylang_compiler.cpp
rylang/rylang/tests/: gtests.cpp
rylang/sources/: ast2_entity.cpp  compiler.cpp  input_aggregator.cpp  llvm_code_generator.cpp  main.cpp  merge_entity.cpp
rylang/sources/ast/: entity_ast.cpp  function_arg_ast.cpp
rylang/sources/manipulators/: convert_llvm_object.cpp  llvm_symbol_relocation.cpp  qmanip.cpp
rylang/sources/res/: asm_procedure_from_symbol_resolver.cpp  call_params_of_function_ast_resolver.cpp  call_params_of_function_ast_resolver.hpp  called_functanoids_resolver.cpp  canonical_type_is_implicitly_convertible_to_resolver.cpp  canonical_type_ref_from_contextual_type_ref_resolver.cpp  class_field_list_from_canonical_chain_resolver.cpp  class_layout_from_canonical_chain_resolver.cpp  class_list_resolver.cpp  class_should_autogen_default_constructor_resolver.cpp  class_size_from_canonical_chain_resolver.cpp  classes_per_file_resolver.cpp  contextualized_reference_resolver.cpp  entity_ast_from_cannonical_chain_resolver.cpp  entity_ast_from_chain_resolver.cpp  entity_canonical_chain_exists_resolver.cpp  file_ast_resolver.cpp  file_content_resolver.cpp  file_module_map_resolver.cpp  filelist_resolver.cpp  files_in_module_resolver.cpp  functanoid_return_type_resolver.cpp  function_ast_resolver.cpp  function_frame_information_resolver.cpp  function_overload_selection_resolver.cpp  function_qualified_reference_resolver.cpp  functum_exists_and_is_callable_with_resolver.cpp  functum_instanciate_ast_resolver.cpp  functum_instanciation_parameter_map_resolver.cpp  functum_instanciation_resolver.cpp  list_builtin_functum_overloads_resolver.cpp  list_functum_overloads_question_f.cpp  list_functum_overloads_resolver.cpp  list_user_functum_overloads_resolver.cpp  module_ast_precursor1_resolver.cpp  module_ast_resolver.cpp  operator_is_overloaded_with_resolver.cpp  overload_set_instanciate_with_resolver.cpp  overload_set_is_callable_with_resolver.cpp  symbol_canonical_chain_exists_resolver.cpp  (+14 more)
rylang/tests/: gtests.cpp
(+1666 files in other folders)
